--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "side-bar",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://jodsab.github.io/react-profile",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "core-js": "^3.15.2",
     "express": "^4.17.1",
+    "gh-pages": "^3.2.3",
     "mongoose": "^5.13.3",
     "morgan": "^1.10.0",
     "react": "^17.0.2",
@@ -18,6 +20,8 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
