--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "side-bar",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://jodsab.github.io/side-bar",
+  "homepage": "https://jodsab.github.io",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
