--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "side-bar",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://jodsab.github.io/react-profile/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -27,7 +26,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "dev": "nodemon src/indexcon.js",
-    "bilt": "webpack --mode development"
+    "bilt": "webpack --mode production"
   },
   "eslintConfig": {
     "extends": [
