--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 SKIP_PREFLIGHT_CHECK = true
+PORT = 3000
+MONGODB_URI= `mongodb+srv://jodsab:dcretovida123@cluster0.nb63h.mongodb.net/myFirstDatabase?retryWrites=true&w=majority`
