--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://jodsab.xyz",
+  "homepage": "jodsab.xyz",
   "name": "side-bar",
   "version": "0.1.0",
   "private": true,
