--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://jodsab.github.io/react-profile/",
+  "homepage": "https://jodsab.xyz/",
   "name": "side-bar",
   "version": "0.1.0",
   "private": true,
