--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.8.3",
     "body-parser": "^1.19.0",
     "core-js": "^3.15.2",
+    "emailjs-com": "^3.2.0",
     "express": "^4.17.1",
     "gh-pages": "^3.2.3",
     "mongoose": "^5.13.3",
